[gd_scene load_steps=4 format=3 uid="uid://di8yfuxhgf75n"]

[ext_resource type="PackedScene" uid="uid://buxqe1mn2rkm5" path="res://World.tscn" id="1_0dyyb"]
[ext_resource type="Script" path="res://main.gd" id="1_g5owv"]
[ext_resource type="Texture2D" uid="uid://bliq50kxpmnrq" path="res://killpill.png" id="3_8rcno"]

[node name="Main" type="Node2D"]
script = ExtResource("1_g5owv")

[node name="World" parent="." instance=ExtResource("1_0dyyb")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonStart" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.67
anchor_right = 0.5
anchor_bottom = 0.67
offset_left = -42.5
offset_top = -26.5
offset_right = 42.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="ResumeButton" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
offset_left = -57.0
offset_top = -24.4
offset_right = 74.0
offset_bottom = 28.6
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="RestartButton" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.67
anchor_right = 0.5
anchor_bottom = 0.67
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Restart
"

[node name="WinLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -11.5
offset_right = 59.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Virus Defeated!"

[node name="LooseLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -11.5
offset_right = 59.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Virus Killed Patient!"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_right = 72.0
offset_bottom = 83.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Virus Count"

[node name="LabelViriiCount" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="TitleTextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -34.5
offset_right = 204.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8rcno")

[connection signal="pressed" from="Control/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Control/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/RestartButton" to="." method="_on_restart_button_pressed"]
